objects/zoom_app__Zoom_Event__c.object
<CustomObject>
    <description>This object is the extension to &quot;Event&quot;  object. It saves all zoom meeting info.</description>
    <fields>
        <fullName>zoom_app__Duration_mins__c</fullName>
        <label>Duration (mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Google_Event_Id__c</fullName>
        <label>Google Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Host_Id__c</fullName>
        <label>Host Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__IsExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__IsZoomMeeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsZoomMeeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_Url__c</fullName>
        <label>Join Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Meeting_Topic__c</fullName>
        <label>Meeting Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Participant_Count__c</fullName>
        <label>Participant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Participants__c</fullName>
        <label>Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Url_1__c</fullName>
        <label>Start Url 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Url_2__c</fullName>
        <label>Start Url 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Url_3__c</fullName>
        <label>Start Url 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__UUID__c</fullName>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Creation_Status__c</fullName>
        <label>Zoom Meeting Creation Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_End_Time__c</fullName>
        <label>Zoom Meeting End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Id__c</fullName>
        <label>Zoom Meeting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Password__c</fullName>
        <label>Zoom Meeting Passcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Start_Time__c</fullName>
        <label>Zoom Meeting Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Status__c</fullName>
        <label>Zoom Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Zoom Event</label>
    <listViews>
        <fullName>zoom_app__All</fullName>
        <columns>NAME</columns>
        <columns>zoom_app__Meeting_Topic__c</columns>
        <columns>zoom_app__Google_Event_Id__c</columns>
        <columns>zoom_app__IsZoomMeeting__c</columns>
        <columns>zoom_app__Zoom_Meeting_Id__c</columns>
        <columns>zoom_app__Join_Url__c</columns>
        <columns>zoom_app__Meeting_Type__c</columns>
        <columns>zoom_app__Participant_Count__c</columns>
        <columns>zoom_app__Participants__c</columns>
        <columns>zoom_app__UUID__c</columns>
        <columns>zoom_app__Zoom_Meeting_Creation_Status__c</columns>
        <columns>zoom_app__Zoom_Meeting_Start_Time__c</columns>
        <columns>zoom_app__Zoom_Meeting_End_Time__c</columns>
        <columns>zoom_app__Zoom_Meeting_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Zoom-Event-{0}</displayFormat>
        <label>Zoom Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>